--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             1000
         );
         // camera.position.set(0, 10, 7);
-        // camera.lookAt(0, 0, 0); 
-        let pickedObjPosition = new THREE.Vector3(-2, 5, -1); // ตัวแปรเก็บตำแหน่งกล้อง
-        let cameraPosition = new THREE.Vector3(0, 5, 5); // ตัวแปรเก็บตำแหน่งกล้อง
+        // camera.lookAt(0, 0, 0); // -5, 1, -1, 0, 5, 6
+        let pickedObjPosition = new THREE.Vector3(-2, 2, 0); // ตัวแปรเก็บตำแหน่งกล้อง
+        let cameraPosition = new THREE.Vector3(-2, 5, 12); // ตัวแปรเก็บตำแหน่งกล้อง
         const controls = new THREE.OrbitControls(camera, renderer.domElement);
         controls.target.set(0, 0.5, 0);
         controls.enableDamping = true;
@@ -52,8 +52,8 @@
         directionalLight.position.set(10, 5, 10);
         directionalLight.castShadow = true; // ✅ เปิดใช้งานเงา
         scene.add(directionalLight);
-        const directionalLightHelper = new THREE.DirectionalLightHelper(directionalLight, 1);
-        scene.add(directionalLightHelper);
+        // const directionalLightHelper = new THREE.DirectionalLightHelper(directionalLight, 1);
+        // scene.add(directionalLightHelper);
 
         //     const pointlight1 = new THREE.PointLight(0xffffff, 5, 5);
         //     pointlight1.position.set(0, 6, -1);
@@ -62,12 +62,12 @@
         //     const pointLightHelper = new THREE.PointLightHelper(pointlight1, 0.2);
         //     scene.add(pointLightHelper);
 
-        const pointlight2 = new THREE.PointLight(0xffffff, 7, 7);
+        const pointlight2 = new THREE.PointLight(0xffffff, 4, 7);
         pointlight2.position.set(-2, 4, 2);
         // pointlight2.castShadow = true; // ✅ เปิดใช้งานเงา
         scene.add(pointlight2);
-        const pointLight2Helper = new THREE.PointLightHelper(pointlight2, 0.2);
-        scene.add(pointLight2Helper);
+        // const pointLight2Helper = new THREE.PointLightHelper(pointlight2, 0.2);
+        // scene.add(pointLight2Helper);
 
         // const spotlight = new THREE.SpotLight(0xffffff, 5);
         // spotlight.position.set(-2, 20, 2);
@@ -170,84 +170,141 @@
             return mesh;
         }
 
-        const box = addObj(
-            new THREE.Mesh(new THREE.BoxGeometry(0.8, 0.8, 0.8), new THREE.MeshBasicMaterial({ color: 0xff6b6b })),
-            new THREE.Vector3(-2, 0.4, 0),
-            'Box'
+        addObj(
+            new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0xff6b6b })),
+            new THREE.Vector3(-3, 3, 6.6),
+            'Pic'
+        );
+        addObj(
+            new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0x00ff00 })),
+            new THREE.Vector3(-3, 5, 6.6),
+            'Name'
+        );
+        addObj(
+            new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0xffffff })),
+            new THREE.Vector3(-1.5, 3.5, -2.4),
+            'Home1'
         );
 
         const VIEWS = { //  pos ตำแหน่งตั้งกล้อง, tar ตำแหน่งที่กล้องมอง
-                Box: { pos: new THREE.Vector3(-3, 1.4, 1.6), tar: new THREE.Vector3(-2, 0.4, 0) },
-            };
-            //let cameraPosition = VIEWS['Sphere'].pos;
-            // --- Raycaster + คลิกเพื่อสลับมุม ---
-            const raycaster = new THREE.Raycaster();
-            const pointer = new THREE.Vector2();
+            Pic: { pos: new THREE.Vector3(-1.5, 4, 0.0), tar: new THREE.Vector3(0.0, 2, -5.0) },
+            Home1: { pos: new THREE.Vector3(-2.0, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
+            Name: { pos: new THREE.Vector3(5, 5, 1.6), tar: new THREE.Vector3(0, -6, 0) },
+            // NameBox: { pos: new THREE.Vector3(-2, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
+            // HomeBox: { pos: new THREE.Vector3(-2, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
+        };
+        //let cameraPosition = VIEWS['Sphere'].pos;
+        // --- Raycaster + คลิกเพื่อสลับมุม ---
+        const raycaster = new THREE.Raycaster();
+        const pointer = new THREE.Vector2();
 
-            function setPointer(e) {
-                const r = renderer.domElement.getBoundingClientRect();
-                const x = (e.clientX ?? e.touches[0].clientX) - r.left;
-                const y = (e.clientY ?? e.touches[0].clientY) - r.top;
-                pointer.x = (x / r.width) * 2 - 1;
-                pointer.y = -(y / r.height) * 2 + 1;
-            }
+        function setPointer(e) {
+            const r = renderer.domElement.getBoundingClientRect();
+            const x = (e.clientX ?? e.touches[0].clientX) - r.left;
+            const y = (e.clientY ?? e.touches[0].clientY) - r.top;
+            pointer.x = (x / r.width) * 2 - 1;
+            pointer.y = -(y / r.height) * 2 + 1;
+        }
 
-            function onPick(e) {
-                setPointer(e);
-                raycaster.setFromCamera(pointer, camera);
-                const hit = raycaster.intersectObjects(clickable, false)[0];
-                if (!hit) return;
-                const view = VIEWS[hit.object.name];
-                cameraPosition = view.pos;
-                // pickedObjPosition = hit.object.position;
-                if (!view) return;
+        function onPick(e) {
+            setPointer(e);
+            raycaster.setFromCamera(pointer, camera);
+            const hit = raycaster.intersectObjects(clickable, false)[0];
+            if (!hit) return;
+            const view = VIEWS[hit.object.name];
+            cameraPosition = view.pos;
+            pickedObjPosition = view.tar;
+            // pickedObjPosition = hit.object.position;
+            if (!view) return;
 
-                // ย้ายแบบทันที (ถ้าอยากนุ่ม ๆ ค่อยเสริม lerp ทีหลัง)
-                // camera.position.copy(view.pos);
-                // controls.target.copy(view.tar);
-                controls.update();
-            }
+            // ย้ายแบบทันที (ถ้าอยากนุ่ม ๆ ค่อยเสริม lerp ทีหลัง)
+            // camera.position.copy(view.pos);
+            // controls.target.copy(view.tar);
+            controls.update();
+        }
 
-            renderer.domElement.addEventListener('click', onPick);
-            renderer.domElement.addEventListener('touchend', (e) => { onPick(e); }, { passive: true });
+        renderer.domElement.addEventListener('click', onPick);
+        renderer.domElement.addEventListener('touchend', (e) => { onPick(e); }, { passive: true });
 
-            // --- Resize ---
-            addEventListener('resize', () => {
-                camera.aspect = innerWidth / innerHeight;
-                camera.updateProjectionMatrix();
-                renderer.setSize(innerWidth, innerHeight);
-            });
+        // --- Resize ---
+        addEventListener('resize', () => {
+            camera.aspect = innerWidth / innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(innerWidth, innerHeight);
+        });
 
-            function lerp(a, b, t) {
-                return a + (b - a) * t;   // t ใน [0..1]
-            } // สูตรหาค่าระหว่างจุด 2 จุด
+        function lerp(a, b, t) {
+            return a + (b - a) * t;   // t ใน [0..1]
+        } // สูตรหาค่าระหว่างจุด 2 จุด
 
-            let t = 0; // ตัวแปรเวลา
-            let cylinderTarget = new THREE.Vector3();
-            // --- Loop ---
-            function loop() {
-                t += 0.02;
-                if (t > 1.0){
-                    t = 0.0;
-                    // cylinderTarget.x = lerp(-3.0, 3.0, Math.random());
-                    // cylinderTarget.y = 0.5;
-                    // cylinderTarget.z = lerp(-4.0, 4.0, Math.random());
-                }; 
-                controls.update();
+        let t = 0; // ตัวแปรเวลา
+        let cylinderTarget = new THREE.Vector3();
 
-                box.position.lerp(cylinderTarget, 0.02);
-                controls.target.lerp(pickedObjPosition, 0.02);
-                camera.position.lerp(cameraPosition, 0.02);
-                // PurpleSphere.position.x = lerp(sphere.position.x, cylinder.position.x, Math.sin(t * Math.PI));
-                // PurpleSphere.position.y = lerp(sphere.position.y, cylinder.position.y, Math.sin(t * Math.PI));
-                // PurpleSphere.position.z = lerp(sphere.position.z, cylinder.position.z, Math.sin(t * Math.PI));
-                
-                // sas.position.set(0,0,0);
-                // sas.rotation.set(-Math.PI/2,0,0);
-                renderer.render(scene, camera);
-                requestAnimationFrame(loop);
-            }
-            loop();
+        // --- เพิ่มธงโบกสะบัดที่ตำแหน่งกำหนดเอง ---
+        const flagUniforms = {
+            uTime: { value: 0.0 },
+            uLightDir: { value: new THREE.Vector3(0.4, 1.0, 0.8).normalize() },
+            uTex: { value: new THREE.TextureLoader().load('https://tse1.mm.bing.net/th/id/OIP.ar69BsRNqg80fBtNeZUUHwHaEc?rs=1&pid=ImgDetMain&o=7&rm=3') }
+        };
+
+        const flagVert = `
+    uniform float uTime;
+    varying vec2 vUv;
+    void main(){
+        vUv = uv;
+        vec3 pos = position;
+
+        // ทำให้ธงโบกสะบัด
+        pos.z += sin(pos.x * 2.0 + uTime * 4.0) * 0.1;
+        pos.y += sin(pos.x * 2.0 + uTime * 4.0) * 0.05;
+
+        gl_Position = projectionMatrix * modelViewMatrix * vec4(pos,1.0);
+    }
+`;
+
+        const flagFrag = `
+    precision mediump float;
+    varying vec2 vUv;
+    uniform sampler2D uTex;
+    void main() {
+        vec3 base = texture2D(uTex, vUv).rgb;
+        gl_FragColor = vec4(base, 1.0);
+    }
+`;
+
+        // Plane สำหรับธง
+        const flagGeo = new THREE.PlaneBufferGeometry(2.0, 1.5, 32, 32);
+        const flagMat = new THREE.ShaderMaterial({
+            vertexShader: flagVert,
+            fragmentShader: flagFrag,
+            uniforms: flagUniforms,
+            side: THREE.DoubleSide
+        });
+
+        const flagMesh = new THREE.Mesh(flagGeo, flagMat);
+        // กำหนดตำแหน่งเอง
+        flagMesh.position.set(0.0, 5.0, 6.7); // ปรับตามต้องการ
+        flagMesh.rotation.y = Math.PI * 0.0; // หมุนถ้าต้องการหันหน้า
+        scene.add(flagMesh);
+
+        // --- ใน loop ของ animation ของโค้ดแรก ---
+        function loop() {
+            t += 0.02;
+
+            // อัปเดตเวลาธง
+            flagUniforms.uTime.value = performance.now() / 1000;
+
+            // ไม่ต้องหมุนเข้ากล้อง
+            // flagMesh.lookAt(camera.position);
+
+            controls.update();
+            controls.target.lerp(pickedObjPosition, 0.02);
+            camera.position.lerp(cameraPosition, 0.02);
+            renderer.render(scene, camera);
+            requestAnimationFrame(loop);
+        }
+
+        loop();
         //พื้นหลัง
         // const exrLoader = new THREE.EXRLoader();
         // exrLoader.load(
@@ -259,27 +316,27 @@
         //     }
         // );
 
-        window.addEventListener('keydown', (event) => {
-            if (event.key === 'ArrowLeft') {
-                directionalLight.rotation.y -= 0.3; // หมุนกล้องเข้า
-            } else if (event.key === 'ArrowRight') {
-                directionalLight.rotation.y += 0.3; // หมุนกล้องออก
-            } else if (event.key === 'ArrowUp') {
-                directionalLight.rotation.x -= 0.3; // หมุนกล้องซ้าย
-            } else if (event.key === 'ArrowDown') {
-                directionalLight.rotation.x += 0.3; // หมุนกล้องขวา
-            }
-            if (event.key === 'w') {
-                directionalLight.position.z -= 0.3; // เลื่อนกล้องเข้า
-            } else if (event.key === 's') {
-                directionalLight.position.z += 0.3; // เลื่อนกล้องออก
-            } else if (event.key === 'a') {
-                directionalLight.position.x -= 0.3; // เลื่อนกล้องซ้าย
-            } else if (event.key === 'd') {
-                directionalLight.position.x += 0.3; // เลื่อนกล้องขวา
-            }
+        // window.addEventListener('keydown', (event) => {
+        //     if (event.key === 'ArrowLeft') {
+        //         directionalLight.rotation.y -= 0.3; // หมุนกล้องเข้า
+        //     } else if (event.key === 'ArrowRight') {
+        //         directionalLight.rotation.y += 0.3; // หมุนกล้องออก
+        //     } else if (event.key === 'ArrowUp') {
+        //         directionalLight.rotation.x -= 0.3; // หมุนกล้องซ้าย
+        //     } else if (event.key === 'ArrowDown') {
+        //         directionalLight.rotation.x += 0.3; // หมุนกล้องขวา
+        //     }
+        //     if (event.key === 'w') {
+        //         directionalLight.position.z -= 0.3; // เลื่อนกล้องเข้า
+        //     } else if (event.key === 's') {
+        //         directionalLight.position.z += 0.3; // เลื่อนกล้องออก
+        //     } else if (event.key === 'a') {
+        //         directionalLight.position.x -= 0.3; // เลื่อนกล้องซ้าย
+        //     } else if (event.key === 'd') {
+        //         directionalLight.position.x += 0.3; // เลื่อนกล้องขวา
+        //     }
 
-        });
+        // });
 
 
         // function animate(t) {
