--- a/index.html
+++ b/index.html
@@ -185,11 +185,19 @@
             new THREE.Vector3(-1.5, 3.5, -2.4),
             'Home1'
         );
+        const Home2 = addObj(
+            new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0xffffff })),
+            new THREE.Vector3(-6.3, 2, 2),
+            'Home2'
+        );
+        Home2.rotation.y = -Math.PI * 0.5; // หันไปทางซ้าย
+
 
         const VIEWS = { //  pos ตำแหน่งตั้งกล้อง, tar ตำแหน่งที่กล้องมอง
             Pic: { pos: new THREE.Vector3(-1.5, 4, 0.0), tar: new THREE.Vector3(0.0, 2, -5.0) },
             Home1: { pos: new THREE.Vector3(-2.0, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
-            Name: { pos: new THREE.Vector3(5, 5, 1.6), tar: new THREE.Vector3(0, -6, 0) },
+            Name: { pos: new THREE.Vector3(-2, 4, 4), tar: new THREE.Vector3(-20, 0, 2) },
+            Home2: { pos: new THREE.Vector3(-2.0, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
             // NameBox: { pos: new THREE.Vector3(-2, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
             // HomeBox: { pos: new THREE.Vector3(-2, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
         };
