--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         //     const pointLightHelper = new THREE.PointLightHelper(pointlight1, 0.2);
         //     scene.add(pointLightHelper);
 
-        const pointlight2 = new THREE.PointLight(0xffffff, 4, 7);
+        const pointlight2 = new THREE.PointLight(0xffffff, 5, 6);  // ความสว่าง, ระยะ
         pointlight2.position.set(-2, 4, 2);
         // pointlight2.castShadow = true; // ✅ เปิดใช้งานเงา
         scene.add(pointlight2);
@@ -176,28 +176,40 @@
             'Pic'
         );
         addObj(
-            new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0x00ff00 })),
+            new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0x00FF7F })),
             new THREE.Vector3(-3, 5, 6.6),
-            'Name'
+            'meme'
         );
         addObj(
             new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0xffffff })),
             new THREE.Vector3(-1.5, 3.5, -2.4),
-            'Home1'
+            'Homepic'
         );
-        const Home2 = addObj(
+        const Homememe = addObj(
             new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0xffffff })),
             new THREE.Vector3(-6.3, 2, 2),
-            'Home2'
+            'Homememe'
         );
-        Home2.rotation.y = -Math.PI * 0.5; // หันไปทางซ้าย
-
+        Homememe.rotation.y = -Math.PI * 0.5; // หันไปทางซ้าย
+        addObj(
+            new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0x87CEFA })),
+            new THREE.Vector3(-3, 4, 6.6),
+            'alien'
+        );
+        const Homealien = addObj(
+            new THREE.Mesh(new THREE.BoxGeometry(0.2, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0xffffff })),
+            new THREE.Vector3(-1.3, 0.1, 1.7),
+            'Homealien'
+        );
+        Homealien.rotation.x = Math.PI * 0.5; // หันขึ้นบน
 
         const VIEWS = { //  pos ตำแหน่งตั้งกล้อง, tar ตำแหน่งที่กล้องมอง
             Pic: { pos: new THREE.Vector3(-1.5, 4, 0.0), tar: new THREE.Vector3(0.0, 2, -5.0) },
-            Home1: { pos: new THREE.Vector3(-2.0, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
-            Name: { pos: new THREE.Vector3(-2, 4, 4), tar: new THREE.Vector3(-20, 0, 2) },
-            Home2: { pos: new THREE.Vector3(-2.0, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
+            Homepic: { pos: new THREE.Vector3(-2.0, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
+            meme: { pos: new THREE.Vector3(-2, 4, 3), tar: new THREE.Vector3(-7, 3.5, 3) },
+            Homememe: { pos: new THREE.Vector3(-2.0, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
+            alien: { pos: new THREE.Vector3(-3, 1, 1), tar: new THREE.Vector3(4, 1, 1) },
+            Homealien: { pos: new THREE.Vector3(-2.0, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
             // NameBox: { pos: new THREE.Vector3(-2, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
             // HomeBox: { pos: new THREE.Vector3(-2, 5, 12), tar: new THREE.Vector3(-2, 2, 0) },
         };
@@ -255,6 +267,7 @@
             uTex: { value: new THREE.TextureLoader().load('https://tse1.mm.bing.net/th/id/OIP.ar69BsRNqg80fBtNeZUUHwHaEc?rs=1&pid=ImgDetMain&o=7&rm=3') }
         };
 
+
         const flagVert = `
     uniform float uTime;
     varying vec2 vUv;
@@ -294,6 +307,71 @@
         flagMesh.position.set(0.0, 5.0, 6.7); // ปรับตามต้องการ
         flagMesh.rotation.y = Math.PI * 0.0; // หมุนถ้าต้องการหันหน้า
         scene.add(flagMesh);
+
+        // โหลด texture ธงใหม่
+        const bozo = new THREE.TextureLoader().load(
+            "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbXGWUbr4_2jeJ6olsx5n2r7B7EED9SdDjHA&s"
+        );
+
+        // สร้างธงใหม่พร้อม texture ของตัวเอง
+        const bozoFlagMat = flagMat.clone();
+        bozoFlagMat.uniforms = {
+            ...flagMat.uniforms,
+            uTex: { value: bozo }  //  ใส่ texture ใหม่
+        };
+
+        const bozoFlag = new THREE.Mesh(flagGeo, bozoFlagMat);
+        bozoFlag.position.set(-6.2, 3.0, 1.2);
+        bozoFlag.rotation.y = Math.PI / 2;
+        scene.add(bozoFlag);
+
+        const micheal = new THREE.TextureLoader().load(
+            "https://us.v-cdn.net/6030815/uploads/IFDHTQV8WCAS/picsart-06-05-08-44-04.jpg"
+        );
+
+        // สร้างธงใหม่พร้อม texture ของตัวเอง
+        const michealFlagMat = flagMat.clone();
+        michealFlagMat.uniforms = {
+            ...flagMat.uniforms,
+            uTex: { value: micheal }  //  ใส่ texture ใหม่
+        };
+
+        const michealFlag = new THREE.Mesh(flagGeo, michealFlagMat);
+        michealFlag.position.set(-6.2, 3.0, 4);
+        michealFlag.rotation.y = Math.PI / 2;
+        scene.add(michealFlag);
+
+        const doctor = new THREE.TextureLoader().load(
+            "https://i.ytimg.com/vi/-ZRLokOnXKc/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLB3UpIslX22T9DKA8OYf2cDuTPbDw"
+        );
+
+        // สร้างธงใหม่พร้อม texture ของตัวเอง
+        const doctorFlagMat = flagMat.clone();
+        doctorFlagMat.uniforms = {
+            ...flagMat.uniforms,
+            uTex: { value: doctor }  //  ใส่ texture ใหม่
+        };
+
+        const doctorFlag = new THREE.Mesh(flagGeo, doctorFlagMat);
+        doctorFlag.position.set(-6.2, 5.0, 4);
+        doctorFlag.rotation.y = Math.PI / 2;
+        scene.add(doctorFlag);
+
+        const steve = new THREE.TextureLoader().load(
+            "https://i.ytimg.com/vi/Z02s-QIOrtk/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLCOEKXleyRAksapyIeaNhpeOLgvSg"
+        );
+
+        // สร้างธงใหม่พร้อม texture ของตัวเอง
+        const steveFlagMat = flagMat.clone();
+        steveFlagMat.uniforms = {
+            ...flagMat.uniforms,
+            uTex: { value: steve }  //  ใส่ texture ใหม่
+        };
+
+        const steveFlag = new THREE.Mesh(flagGeo, steveFlagMat);
+        steveFlag.position.set(-6.2, 5.0, 1.2);
+        steveFlag.rotation.y = Math.PI / 2;
+        scene.add(steveFlag);
 
         // --- ใน loop ของ animation ของโค้ดแรก ---
         function loop() {
