--- a/index.html
+++ b/index.html
@@ -160,6 +160,19 @@
         }, undefined, function (error) {
             console.error('Error loading GLTF:', error);
         });
+        loader.load('https://phatlaksanai.github.io/newsign.glb', function (gltf) {
+            const object = gltf.scene;
+            object.traverse(function (child) {
+                if (child.isMesh) {
+                    //child.castShadow = true;
+                    child.receiveShadow = true;
+                }
+            });
+            object.position.set(-2, 0, 2);
+            scene.add(object);
+        }, undefined, function (error) {
+            console.error('Error loading GLTF:', error);
+        });
 
         const clickable = []; // เก็บเฉพาะ object ที่ต้องการให้คลิกได้
         function addObj(mesh, pos, name) {
@@ -172,28 +185,28 @@
 
         addObj(
             new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0xff6b6b })),
-            new THREE.Vector3(-3, 3, 6.6),
+            new THREE.Vector3(-2.2, 1.5, 6.6),
             'Pic'
         );
         addObj(
             new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0x00FF7F })),
-            new THREE.Vector3(-3, 5, 6.6),
+            new THREE.Vector3(-2.2, 4.5, 6.6),
             'meme'
         );
         addObj(
             new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0xffffff })),
-            new THREE.Vector3(-1.5, 3.5, -2.4),
+            new THREE.Vector3(-2, 3.5, -2.4),
             'Homepic'
         );
         const Homememe = addObj(
             new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0xffffff })),
-            new THREE.Vector3(-6.3, 2, 2),
+            new THREE.Vector3(-6.3, 1.6, 2),
             'Homememe'
         );
         Homememe.rotation.y = -Math.PI * 0.5; // หันไปทางซ้าย
         addObj(
             new THREE.Mesh(new THREE.BoxGeometry(0.5, 0.3, 0.1), new THREE.MeshBasicMaterial({ color: 0x87CEFA })),
-            new THREE.Vector3(-3, 4, 6.6),
+            new THREE.Vector3(-2.2, 3, 6.6),
             'alien'
         );
         const Homealien = addObj(
