--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         const directionalLight = new THREE.DirectionalLight(0xffeedd, 2);
         directionalLight.position.set(10, 5, 10);
-        directionalLight.castShadow = true; // ✅ เปิดใช้งานเงา
+        directionalLight.castShadow = true; 
         scene.add(directionalLight);
         // const directionalLightHelper = new THREE.DirectionalLightHelper(directionalLight, 1);
         // scene.add(directionalLightHelper);
@@ -62,19 +62,18 @@
         // const pointLight1Helper = new THREE.PointLightHelper(pointlight1, 0.2);
         // scene.add(pointLight1Helper);
 
-        const pointlight3 = new THREE.PointLight(0xffffff, 3, 3);
-        pointlight3.position.set(1, 2, -1);
-        // pointlight3.castShadow = true; // ✅ เปิดใช้งานเงา
-        scene.add(pointlight3);
-        // const pointLight3Helper = new THREE.PointLightHelper(pointlight3, 0.2);
-        // scene.add(pointLight3Helper);
-
         const pointlight2 = new THREE.PointLight(0xffffff, 5, 6);  // ความสว่าง, ระยะ
         pointlight2.position.set(-2, 4, 2);
-        // pointlight2.castShadow = true; // ✅ เปิดใช้งานเงา
         scene.add(pointlight2);
-        // const pointLight2Helper = new THREE.PointLightHelper(pointlight2, 0.2);
-        // scene.add(pointLight2Helper);
+
+        const pointlight3 = new THREE.PointLight(0xffffff, 3, 3);
+        pointlight3.position.set(1, 2, -1);
+        scene.add(pointlight3);
+
+        const pointlight4 = new THREE.PointLight(0xffffff, 15, 3);
+        pointlight4.position.set(-2, 17, 1);
+        scene.add(pointlight4);
+
 
         //✅ พื้น
         const planeGeometry = new THREE.PlaneGeometry(10, 10);
@@ -170,6 +169,19 @@
         }, undefined, function (error) {
             console.error('Error loading GLTF:', error);
         });
+        loader.load('https://phatlaksanai.github.io/name_credit.glb', function (gltf) {
+            const object = gltf.scene;
+            object.traverse(function (child) {
+                if (child.isMesh) {
+                    //child.castShadow = true;
+                    child.receiveShadow = true;
+                }
+            });
+            object.position.set(-2, 0, 2);
+            scene.add(object);
+        }, undefined, function (error) {
+            console.error('Error loading GLTF:', error);
+        });
 
         const clickable = []; // เก็บเฉพาะ object ที่ต้องการให้คลิกได้
 
@@ -178,7 +190,7 @@
             uLightDir: { value: new THREE.Vector3(0.4, 1.0, 0.8).normalize() },
             uTex: {
                 value: new THREE.TextureLoader().load(
-                    "https://th.bing.com/th/id/R.7c039f1f5011beb8748fe708affa1994?rik=BBcM1h5lbRbrjg&pid=ImgRaw&r=0" 
+                    "https://th.bing.com/th/id/R.7c039f1f5011beb8748fe708affa1994?rik=BBcM1h5lbRbrjg&pid=ImgRaw&r=0"
                 )
             }
         };
@@ -246,7 +258,7 @@
             new THREE.Vector3(-2.2, 1.5, 6.6),
             'Pic'
         );
-        pic.rotation.y = -Math.PI * 0.5; 
+        pic.rotation.y = -Math.PI * 0.5;
         const meme = addObj(
             new THREE.Mesh(new THREE.SphereGeometry(0.2, 32, 32), new THREE.MeshBasicMaterial({ color: 0x00FF7F })),
             new THREE.Vector3(-2.2, 4.5, 6.6),
@@ -309,6 +321,13 @@
         );
         NextCredit.rotation.z = Math.PI * 0.5;
         NextCredit.rotation.y = -Math.PI * 0.5;
+        const BackCredit = addObj(
+            new THREE.Mesh(new THREE.SphereGeometry(0.5, 32, 32), new THREE.MeshBasicMaterial({ color: 0xffffff })),
+            new THREE.Vector3(-1, 18, 10),
+            'BackCredit'
+        );
+        BackCredit.rotation.x = Math.PI * 0.75;
+        BackCredit.rotation.y = -Math.PI * 0.5;
 
 
         const VIEWS = { //  pos ตำแหน่งตั้งกล้อง, tar ตำแหน่งที่กล้องมอง
@@ -322,7 +341,8 @@
             backalien: { pos: new THREE.Vector3(-3, 1, 1), tar: new THREE.Vector3(4, 1, 1) },
             NextDetailNisit: { pos: new THREE.Vector3(0.0, 3.0, 5), tar: new THREE.Vector3(10.0, 1, 3) },
             BackDetailNisit: { pos: new THREE.Vector3(-1.5, 4, 0.0), tar: new THREE.Vector3(0.0, 2, -5.0) },
-            NextCredit: { pos: new THREE.Vector3(-2, 10, 2), tar: new THREE.Vector3(0, 20, 0) },
+            NextCredit: { pos: new THREE.Vector3(-2, 10, 2), tar: new THREE.Vector3(0, 20, 2) },
+            BackCredit: { pos: new THREE.Vector3(-5.0, 3.3, 1), tar: new THREE.Vector3(-5.0, 2, 0) },
         };
         //let cameraPosition = VIEWS['Sphere'].pos;
         // --- Raycaster + คลิกเพื่อสลับมุม ---
